...
                final itemWidth = constraints.maxWidth / count;

                return ValueListenableBuilder<GlassNavigationState>(
                  valueListenable: _controller,
                  builder: (context, state, _) {
                    return GestureDetector(
                      key: const ValueKey('glass_bottom_nav_bar_gesture'),
                      behavior: HitTestBehavior.opaque,
                      onHorizontalDragStart: (d) => DragUpdateCommand(
                        dragX: d.localPosition.dx,
                        barWidth: constraints.maxWidth,
                      ).execute(_controller),
                      onHorizontalDragUpdate: (d) => DragUpdateCommand(
...
                  final itemWidth = constraints.maxWidth / count;

                  return ValueListenableBuilder<GlassNavigationState>(
                    valueListenable: _controller,
                    builder: (context, state, _) {
                      return GestureDetector(
                        key: const ValueKey('liquid_bottom_nav_bar_gesture'),
                        behavior: HitTestBehavior.opaque,
                        onHorizontalDragStart: (d) => DragUpdateCommand(
                          dragX: d.localPosition.dx,
                          barWidth: constraints.maxWidth,
                        ).execute(_controller),
                        onHorizontalDragUpdate: (d) => DragUpdateCommand(
...
