...
                builder: (context, constraints) {
                  final count = widget.items.length;
                  if (count == 0) return const Offstage();
                  final itemWidth = constraints.maxWidth / count;

                  return GestureDetector(
                    key: const ValueKey('liquid_bottom_nav_bar_gesture'),
                    behavior: HitTestBehavior.opaque,
                    onHorizontalDragStart: (d) => DragUpdateCommand(
                      dragX: d.localPosition.dx,
                      barWidth: constraints.maxWidth,
                    ).execute(_controller),
                    onHorizontalDragUpdate: (d) => DragUpdateCommand(
...
